make title page better

--- a/result/main.tex
+++ b/result/main.tex
@@ -23,13 +23,28 @@
 \usepackage{textgreek}
 \usepackage{pifont}
 
-\title{The Deadly Spiral: Hybrid Continuous-Discrete Simulation of Pharmacokinetic-Pharmacodynamic Interactions in Opioid Overdose}
-\author{Jakub Kubo}
-\date{December 2025}
-
 \begin{document}
 
-\maketitle
+\begin{titlepage}
+    \begin{center}
+        {\Large \textsc{Brno University of Technology} \\}
+        \vspace{0.5em}
+        {\large \textsc{Faculty of Information Technology} \\}
+        \vspace{\stretch{0.382}}
+        
+        {\LARGE \bfseries The Deadly Spiral: Hybrid Continuous-Discrete Simulation of Pharmacokinetic-Pharmacodynamic Interactions in Opioid Overdose \\}
+        \vspace{1em}
+        {\Large \textsc{Modelling and Simulation Project} \\}
+        
+        \vspace{\stretch{0.618}}
+    \end{center}
+    
+    \begin{flushleft}
+        \Large
+        \textbf{Author:} Jakub Kubo \\
+        \textbf{Date:} \today
+    \end{flushleft}
+\end{titlepage}
 \newpage
 
 \tableofcontents
